--- a/tasks-10/index.html
+++ b/tasks-10/index.html
@@ -3,13 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Countdown Timer</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <script src="index.js" defer></script>
 </head>
 
 <body>
-    <div id="countdown"></div>
-    <script src="index.js"></script>
+    <div>
+        <h3 class="hell"></h3>
+    </div>
 </body>
 
 </html>
