--- a/tasks-10/index.html
+++ b/tasks-10/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>
+    
 </head>
 
 <body>
     <div>
-        <h3 class="hell"></h3>
+        <h1 class="countdown"></h1>
     </div>
+    <script src="index.js" defer></script>
 </body>
 
 </html>
